syntax = "proto3";

package seti;

option go_package = "github.com/KontonGu/FaST-GShare/proto/seti;seti";



// Empty request for getting available GPUs
message GetGPUsRequest {}

// Response containing list of available GPUs
message GetGPUsResponse {
    repeated VirtualGPU gpus = 1;
}

// Message representing a virtual GPU
message VirtualGPU {
    string id = 1;
    int32 device_index = 2;
    uint64 memory_bytes = 3;
    int32 multiprocessor_count = 4;
    bool is_provisioned = 5;
    bool in_use = 6;
   optional GPU provisioned_gpu = 7;
}

// Message representing a physical GPU
message GPU {
    string uuid = 1;
    string name = 2;
    uint64 memory_bytes = 3;
    int32 multiprocessor_count = 4;
    int32 parent_device_index = 5;
    string parent_uuid = 6;
}

// Request for a virtual GPU with specific requirements
message VirtualGPURequest {
    uint64 required_memory_bytes = 1;
    int32 required_multiprocessor_count = 2;
}





// Service definition for GPU resource management
service GPUConfigurator {
    // Get available virtual GPUs
    rpc GetAvailableGPUs (GetGPUsRequest) returns (GetGPUsResponse) {}
    
    // Request a virtual GPU with specific requirements
    rpc RequestVirtualGPU (VirtualGPURequest) returns (VirtualGPU) {}
}